s3アップロードに対応 (#2)
* s3アップロードでアイコン操作可能に

* defaultvalueを設定
